# PyTemplate

./: .flake8  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  tasks.py
pytemplate/: __init__.py  module1.py  module2.py  utils.py
tests/: test_module1.py  test_module2.py
